[meta][repo]: add raylib dependency

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,7 @@ cmake_minimum_required(VERSION 3.20)
 
 project(furnicar)
 
+add_subdirectory("external/raylib")
 
 add_executable(furnicar "src/main.c")
+target_link_libraries(furnicar raylib)
